Avoid 'experimental' chip overflow on small screens

--- a/assets/css/homepage.scss
+++ b/assets/css/homepage.scss
@@ -309,11 +309,16 @@
         }
 
         img {
-          max-width: 4rem;
-          filter: colors.$topnav-foreground-filter-light;
+          display: none;
 
-          @include colors.dark {
-            filter: colors.$topnav-foreground-filter-dark;
+          @include xsAndUp {
+            display: unset;
+            max-width: 4rem;
+            filter: colors.$topnav-foreground-filter-light;
+
+            @include colors.dark {
+              filter: colors.$topnav-foreground-filter-dark;
+            }
           }
         }
 
